new tasks function added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body class="body js-body">
         <h1 class="header">Lista zadań</h1>
         <div class="container">
-            <form class="form">
+            <form class="form js-form">
             <h2 class="form__header">Dodaj nowe zadanie</h2>
             <hr class="form__hr">
             <section class="form__section"><input class="form__section form__section--input js-newTask" placeholder="Co jest do zrobienia?">
