--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
             <section class="form__section"><input class="form__section form__section--input js-newTask" placeholder="Co jest do zrobienia?">
               <button class="form__section form__section--button js-button">Dodaj zadanie</button>
             </section>
-            
             </div>
             <div class="container">
             <h2 class="form__header">Lista zadań</h2>
             <hr class="form__hr">
-            <ul class="js-tasks"></ul>
+            <ul class="form__tasks js-tasks"></ul>
+          </form>
         </div>
-        </form>
-   
+      
   </body>
 </html>   
