--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet" />
     <link href="css/form.css" rel="stylesheet" />
+    <link href="css/listItem.css" rel="stylesheet" />
     <script defer src="js/script.js"></script>
   </head>
   <body class="body js-body">
