--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lista zadań</title>
+    <link rel="icon" href="images/icon.png">
     <meta property="og:image" content="https://dominikaorlinska.github.io/to-do-list/images/share.png">
     <link
       rel="stylesheet"
