--- a/index.html
+++ b/index.html
@@ -4,38 +4,55 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lista zadań</title>
-    <link rel="icon" href="images/icon.png">
-    <meta property="og:image" content="https://dominikaorlinska.github.io/to-do-list/images/share.png">
+    <link rel="icon" href="images/icon.png" />
+    <meta
+      property="og:image"
+      content="https://dominikaorlinska.github.io/to-do-list/images/share.png"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
       integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    /><link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link href="css/style.css" rel="stylesheet" />
     <link href="css/form.css" rel="stylesheet" />
+    <link href="css/section.css" rel="stylesheet" />
     <link href="css/listItem.css" rel="stylesheet" />
     <script defer src="js/script.js"></script>
   </head>
   <body class="body js-body">
-        <h1 class="header">Lista zadań</h1>
-        <div class="container">
-            <form class="form js-form">
-            <h2 class="form__header">Dodaj nowe zadanie</h2>
-            <hr class="form__hr">
-            <section class="form__section"><input class="form__section form__section--input js-newTask" placeholder="Co jest do zrobienia?">
-              <button class="form__section form__section--button js-button">Dodaj zadanie</button>
-            </section>
-            </div>
-            <div class="container">
-            <h2 class="form__header">Lista zadań</h2>
-            <hr class="form__hr">
-            <ul class="form__tasks js-tasks"></ul>
-          </form>
-        </div>
-      
+    <main>
+    <h1 class="header">Lista zadań</h1>
+    <div class="container">
+      <section class="section">
+        <h2 class="section section__header">Dodaj nowe zadanie</h2>
+        <form class="form js-form">
+          <hr class="section section__hr"/>
+          <input
+            class="form__input js-newTask"
+            placeholder="Co jest do zrobienia?"
+          />
+          <button class="form form__button js-button">
+            Dodaj zadanie
+          </button>
+        </form>
+      </section>
+    </div>
+    <div class="container">
+      <section class="section">
+        <h2 class="section section__header">Lista zadań</h2>
+        <hr class="section section__hr"/>
+        <ul class="form__tasks js-tasks"></ul>
+      </section>
+    </div>
+  </main>
   </body>
-</html>   
+</html>
